# VpnClient

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Core/: CMakeLists.txt
Core/include/NovaVPN/Core/: Cancellation.h  Config.h  DataProtection.h  EventBus.h  FileUtil.h  Handle.h  Json.h  Paths.h  Result.h  SecureMemory.h  Status.h  StringUtil.h  Types.h  Uuid.h  Version.h.in  WinError.h
Core/src/: Cancellation.cpp  Config.cpp  DataProtection.cpp  FileUtil.cpp  Json.cpp  Paths.cpp  SecureMemory.cpp  Status.cpp  StringUtil.cpp  Types.cpp  Uuid.cpp  WinError.cpp
Database/: CMakeLists.txt
Database/include/NovaVPN/Database/: Database.h
Database/src/: Schema.cpp  SqliteDatabase.cpp
Driver/: CMakeLists.txt
Driver/include/NovaVPN/Driver/: WintunAdapter.h
Driver/src/: WintunAdapter.cpp  WintunLibrary.cpp  WintunLibrary.h
Firewall/: CMakeLists.txt
Firewall/include/NovaVPN/Firewall/: FirewallEngine.h
Firewall/src/: FirewallEngine.cpp  LeakTester.cpp  WfpEngine.cpp
Installer/: NovaVPN.wxs  README.md  build-installer.ps1
Logs/: CMakeLists.txt
Logs/include/NovaVPN/Logs/: LogRecord.h  Logger.h  Sink.h
Logs/src/: LogRecord.cpp  Logger.cpp  Sink.cpp
Networking/: CMakeLists.txt
Networking/include/NovaVPN/Networking/: IpAddress.h  NetworkMonitor.h  Resolver.h  SockAddr.h  Statistics.h
Networking/src/: IpAddress.cpp  NetworkMonitor.cpp  Resolver.cpp  SockAddr.cpp  Statistics.cpp
Profiles/: CMakeLists.txt
Profiles/include/NovaVPN/Profiles/: OvpnParser.h  Profile.h  ProfileStore.h
Profiles/src/: CredentialStore.cpp  OvpnParser.cpp  Profile.cpp  SqliteProfileStore.cpp
Resources/: README.md
Routing/: CMakeLists.txt
Routing/include/NovaVPN/Routing/: RouteManager.h  RoutingRules.h
Routing/src/: RouteManager.cpp  RoutingRules.cpp
Services/: CMakeLists.txt
Services/include/NovaVPN/Services/: IpcClient.h  IpcProtocol.h  IpcServer.h  ServiceApi.h  ServiceHost.h
Services/src/: IpcClient.cpp  IpcProtocol.cpp  IpcServer.cpp  ServiceApi.cpp  ServiceHost.cpp  ServiceMain.cpp
SplitTunnel/: CMakeLists.txt
SplitTunnel/include/NovaVPN/SplitTunnel/: ProcessRegistry.h  SplitTunnelEngine.h
SplitTunnel/src/: ProcessRegistry.cpp  SplitTunnelEngine.cpp
Tests/: CMakeLists.txt
Tests/bench/: Benchmarks.cpp
Tests/integration/: CrossSubsystemTests.cpp
Tests/stress/: ConcurrencyStressTests.cpp  IpcStressTests.cpp  RobustnessTests.cpp
Tests/unit/: CancellationTests.cpp  ConfigTests.cpp  CredentialStoreTests.cpp  DataProtectionTests.cpp  DatabaseTests.cpp  EngineRegistryTests.cpp  EventBusTests.cpp  FirewallTests.cpp  IpAddressTests.cpp  IpcProtocolTests.cpp  IpcTransportTests.cpp  LeakTesterTests.cpp  LoggerTests.cpp  NetworkMonitorTests.cpp  OpenVpnEngineTests.cpp  OvpnParserTests.cpp  ProcessRegistryTests.cpp  ProfileStoreTests.cpp  ProfileTests.cpp  ResolverTests.cpp  RouteManagerTests.cpp  RoutingRulesTests.cpp  SecureMemoryTests.cpp  ServiceApiTests.cpp  SignatureVerifierTests.cpp  SockAddrTests.cpp  SplitTunnelTests.cpp  StatisticsTests.cpp  StatusTests.cpp  StringUtilTests.cpp  TunnelManagerTests.cpp  UpdaterFlowTests.cpp  UuidTests.cpp  WintunTests.cpp
Tunnel/: CMakeLists.txt
Tunnel/include/NovaVPN/Tunnel/: Engine.h  OpenVpnEngine.h  Tunnel.h
Tunnel/openvpn/: OpenVpnEngine.cpp  OpenVpnEngineStub.cpp
Tunnel/src/: EngineRegistry.cpp  TunnelManager.cpp
UI/: README.md
UI/NovaVpn.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NovaVpn.App.csproj  README.md  app.manifest
UI/NovaVpn.App/Ipc/: IpcClient.cs  Protocol.cs
UI/NovaVpn.App/Models/: ProfileSummary.cs
UI/NovaVpn.App/Services/: NovaVpnService.cs  ServiceBootstrap.cs
UI/NovaVpn.App/ViewModels/: AboutViewModel.cs  LogsViewModel.cs  MainViewModel.cs  ObservableObject.cs  SettingsViewModel.cs  ShellViewModel.cs  SplitTunnelViewModel.cs  StatisticsViewModel.cs
UI/NovaVpn.App/Views/: AboutView.xaml  AboutView.xaml.cs  CredentialDialog.xaml  CredentialDialog.xaml.cs  DashboardView.xaml  DashboardView.xaml.cs  LogsView.xaml  LogsView.xaml.cs  ProfileDetailDialog.xaml  ProfileDetailDialog.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs  SplitTunnelView.xaml  SplitTunnelView.xaml.cs  StatisticsView.xaml  StatisticsView.xaml.cs
Updater/: CMakeLists.txt
Updater/include/NovaVPN/Updater/: Updater.h
Updater/src/: SignatureVerifier.cpp  Updater.cpp  UpdaterImpl.cpp  WinHttpFetcher.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake  NovaVpnModule.cmake  NovaVpnOptions.cmake  NovaVpnVersion.cmake
docs/: ARCHITECTURE.md  BUILD.md  OPENVPN_ENGINE.md  SECURITY.md  TESTING.md
scripts/: build.ps1
